# wos-gaming-samples

./: LICENSE.txt  README.md
DisplayAdapterDetect/: CMakeLists.txt  DisplayAdapterDetect.cpp
WindowsOnSnapdragonDetect/: CMakeLists.txt  WindowsOnSnapdragonDetect.cpp  build.bat
